--- a/animal/app/src/main/AndroidManifest.xml
+++ b/animal/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.Animal"
         tools:targetApi="31">
         <activity
+            android:name=".Animal4Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Animal3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Animal2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Animal1Activity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
